# DevBuddy-

./: .gitconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh  task_log.txt
include/: task_manager.hpp
src/: main.cpp  task_manager.cpp
tests/: CMakeLists.txt  test_main.cpp  tests_tasks_manager.cpp
